# tree-sitter-wa.rpc

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json  xbuid.sh
bindings/c/: tree-sitter-warpc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_warpc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWarpc/: warpc.h
bindings/swift/TreeSitterWarpcTests/: TreeSitterWarpcTests.swift
examples/: wanime.wa.rpc
src/: grammar.json  node-types.json  parser.c
